--- a/ANS-winter2014/bibliography.bib
+++ b/ANS-winter2014/bibliography.bib
@@ -1,57 +1,58 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+@article{jlg1,
+  title   = "Entropy viscosity method for nonlinear conservation laws",
+  author  = "J L Guermond and R Pasquetti",
+  journal = "Journal of Comput. Phys",
+  volume  = "230",
+  pages   = "4248-4267",
+  year    = "2011",
+  }
 
+@article{jlg2,
+  title   = "Entropy Viscosity Method for High-Order Approximations of Conservation Laws",
+  author  = "J L Guermond and R Pasquetti",
+  journal = "Lecture Notes in Computational Science and Engineering",
+  volume  = "76",
+  pages   = "411-418",
+  year    = "2011",
+  }
 
-%% Created for Seth Johnson at 2010-01-15 15:01:56 -0500 
+@book{Toro,
+  author    = "E F Toro",
+  title     = "Riemann Solvers and numerical methods for fluid dynamics",
+  year      = "1999",
+  publisher = "$2^{nd}$ Edition, Springer",
+  }
 
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
-
-@article{Lar2008,
-	Author = {Larsen, Edward W. and Wollaber, Allan B.},
-	Date-Added = {2010-01-15 15:01:35 -0500},
-	Date-Modified = {2010-01-15 15:01:35 -0500},
-	Journal = {Nuclear Science and Engineering},
-	Keywords = {SN},
-	Number = {3},
-	Pages = {267--283},
-	Title = {A Quantitative Theory of Angular Truncation Errors in Three-Dimensional {$S_N$} Calculations},
-	Volume = {160},
-	Year = {2008}}
-
-@techreport{Car1953,
-	Author = {Carlson, Bengt G.},
-	Date-Added = {2010-01-15 14:53:00 -0500},
-	Date-Modified = {2010-01-15 14:53:00 -0500},
-	Institution = {Los Alamos Scientific Laboratory},
-	Number = {LA-1599},
-	Title = {Solution of the Transport Equation by {S$_n$} Approximations},
-	Year = {1953}}
-
-@book{Kno2000,
-	Author = {Knoll, Glenn F.},
-	Date-Added = {2010-01-15 14:52:06 -0500},
-	Date-Modified = {2010-01-15 14:52:06 -0500},
-	Edition = {3rd},
-	Publisher = {John Wiley \& Sons, Inc.},
-	Title = {Radiation Detection and Measurement},
-	Year = {2000}}
-
-@article{Pul2010,
-	Author = {Pullum, Geoffrey K.},
-	Journal = {English Today},
-	Number = {2},
-	Pages = {34--44},
-	Title = {The Land of the Free and \emph{The Elements of Style}},
-	Volume = {26},
-	Year = {2010}}
-
-@book{Str2000,
-	Author = {Strunk, W. and White, E.B.},
-	Edition = {4},
-	Publisher = {New York: Allyn and Bacon},
-	Title = {The Elements of Style},
-	Year = {2000}}
+@article{jlg,
+  title   = "Viscous regularization of the Euler equations and entropy principles",
+  author  = "J L Guermond and B Popov",
+  journal = "under review",
+  year    = "2012",
+  }	
 	
+@article{Moose,
+  title   = "A parallel computational framework for coupled systems of nonlinear equations",
+  author  = "D Gaston and C Newsman and G Hansen and D Lebrun-Grandie",
+  journal = "Nucl. Eng. Design",
+  volume  = "239",
+  pages   = "1768-1778",
+  year    = "2009",
+  }	
+
+@article{LowMach1,
+  title   = "On the behavior of upwind schemes in the low Mach number limit",
+  author  = "H Guillard and C Viozat",
+  journal = "Computers \& Fluids",
+  volume  = "28",
+  pages   = "63-86",
+  year    = "1999",
+  }	
+	
+@article{Hump,
+  title   = "A Robust Multigrid Algorithm for the Euler Equations with Local Preconditioning and Semi-coarsening",
+  author  = "D L Darmofal and K Siu",
+  journal = "Journal of Computational Physics",
+  volume  = "151",
+  pages   = "728-756",
+  year    = "1999",
+  }
