remove erroneous ref

--- a/ANS-winter2014/ANS_2014.tex
+++ b/ANS-winter2014/ANS_2014.tex
@@ -149,7 +149,7 @@ Then, the entropy viscosity coefficients are given by
 where $|| \cdot ||_\infty$ and $\bar{\cdot}$ denote the L$_\infty$-norm and the average operator over the entire computational domain, $K$ is a given element of the mesh, and $\vec{R}_q$ is a quadrature point location within cell $K$. $\Pr$ is the Prandtl number; see \cite{jlg1} for additional details..
 
 However, in low-Mach regime, the flow is isentropic, so both the numerator and denominator in \eqt{eq:ent_visc_coeff} tend towards 0, making
-the definition of the entropy viscosity coefficients ill-determined. One can recast demonstrate \cite{jlg,marco_inl_report} that
+the definition of the entropy viscosity coefficients ill-determined. One can recast demonstrate \cite{marco_inl_report} that
 \begin{equation}
 \label{eq:ent_res}
 \resi(\vec{r},t) := \partial_t s + \vec{u} \cdot \grad s \propto \left( \matder{P} - c^2 \matder{\rho} \right)  :=\resinew(\vec{r},t) ,
