--- a/ANS-winter2014/bibliography.bib
+++ b/ANS-winter2014/bibliography.bib
@@ -56,3 +56,12 @@
   pages   = "728-756",
   year    = "1999",
   }
+  
+@article{marco_low_mach_paper,
+  title   = "Entropy-based viscous regularization for the multi-dimensional Euler equations in low-Mach and transonic flows",
+  author  = "Marc O. Delchini and Jean C. Ragusa and Ray Berry",
+  journal = "Journal of Computational Physics",
+  volume  = "in preparation",
+  year    = "2014",
+  }  
+  
