added ans summary for 7-equ model

--- a/ANS-winter2014/bibliography.bib
+++ b/ANS-winter2014/bibliography.bib
@@ -56,3 +56,12 @@
   pages   = "728-756",
   year    = "1999",
   }
+  
+@article{marco_inl_report,
+  title   = "A Robust Multigrid Algorithm for the Euler Equations with Local Preconditioning and Semi-coarsening",
+  author  = "D L Darmofal and K Siu",
+  journal = "Journal of Computational Physics",
+  volume  = "151",
+  pages   = "728-756",
+  year    = "1999",
+  }
