--- a/ANS-winter2014/7Eqn_ANS_2014/bibliography.bib
+++ b/ANS-winter2014/7Eqn_ANS_2014/bibliography.bib
@@ -43,6 +43,7 @@
   title   = "Entropy-based viscous regularization for the multi-dimensional Euler equations in low-Mach and transonic flows",
   author  = "M O Delchini and J C Ragusa and R Berry",
   journal = "under review",
+  year    = "2014",
   }
 
 @article{SGEOS,
